@@ -1,3 +1,4 @@
+* Limit move locations 'child_of' constraints to specific shipment states
 * Allow to delete staging move
 * Allow to deactivate only empty locations
 
